#find . -name "*.h" | sed -e 's/^\.\///' | sed -e 's/^.*$/  & \\/' | sort
nobase_include_HEADERS = \
  firtex/analyzer/AnalyzerFactory.h \
  firtex/analyzer/Analyzer.h \
  firtex/analyzer/AnalyzerMapper.h \
  firtex/analyzer/DateTimeAnalyzer.h \
  firtex/analyzer/DateTimeLexer.h \
  firtex/analyzer/DoubleArrayTrie.h \
  firtex/analyzer/FilterFactory.h \
  firtex/analyzer/GBKTokenLexer.h \
  firtex/analyzer/KeywordAnalyzer.h \
  firtex/analyzer/LowercaseFilter.h \
  firtex/analyzer/MaxForwardSegmenter.h \
  firtex/analyzer/NumericAnalyzer.h \
  firtex/analyzer/Segmenter.h \
  firtex/analyzer/SingleWordAnalyzer.h \
  firtex/analyzer/StandardAnalyzer.h \
  firtex/analyzer/StandardStopFilter.h \
  firtex/analyzer/StandardTokenizer.h \
  firtex/analyzer/SynonymFilter.h \
  firtex/analyzer/SynonymMap.h \
  firtex/analyzer/TokenFilter.h \
  firtex/analyzer/Token.h \
  firtex/analyzer/Tokenizer.h \
  firtex/analyzer/TokenSource.h \
  firtex/analyzer/TokenView.h \
  firtex/analyzer/UnigramSegmenter.h \
  firtex/analyzer/UTF8TokenLexer.h \
  firtex/analyzer/WhitespaceAnalyzer.h \
  firtex/common/Any.h \
  firtex/common/AppenderFactory.h \
  firtex/common/Appender.h \
  firtex/common/BasicLoggingLayout.h \
  firtex/common/Common.h \
  firtex/common/Compiler_GCC.h \
  firtex/common/Compiler_IC.h \
  firtex/common/Compiler_VC.h \
  firtex/common/ConsoleAppender.h \
  firtex/common/FileAppender.h \
  firtex/common/IndexDefines.h \
  firtex/common/IntTypes.h \
  firtex/common/IO.h \
  firtex/common/IO_POSIX.h \
  firtex/common/IO_WIN32.h \
  firtex/common/LayoutAppender.h \
  firtex/common/Logger.h \
  firtex/common/LoggingEvent.h \
  firtex/common/LoggingLayoutFactory.h \
  firtex/common/LoggingLayout.h \
  firtex/common/LoggingLevel.h \
  firtex/common/Notifiable.h \
  firtex/common/Notification.h \
  firtex/common/Notifier.h \
  firtex/common/PatternLoggingLayout.h \
  firtex/common/Platform.h \
  firtex/common/Portability.h \
  firtex/common/RefCountedObject.h \
  firtex/common/SharedPtr.h \
  firtex/common/StdHeader.h \
  firtex/common/tchar.h \
  firtex/common/TypeDefs.h \
  firtex/config/Configurable.h \
  firtex/config/Configurator.h \
  firtex/config/GlobalConfig.h \
  firtex/config/XMLConfigurator.h \
  firtex/document/AnalyzedDocument.h \
  firtex/document/AnalyzedField.h \
  firtex/document/BuiltInFieldDefinition.h \
  firtex/document/Document.h \
  firtex/document/DocumentSchema.h \
  firtex/document/DocumentType.h \
  firtex/document/FieldDefinition.h \
  firtex/document/Field.h \
  firtex/document/FieldSchema.h \
  firtex/document/FieldType.h \
  firtex/document/TypedDocument.h \
  firtex/FirteX.h \
  firtex/index/AsyncCommitScheduler.h \
  firtex/index/AsyncDocumentConsumer.h \
  firtex/index/BarrelDirectory.h \
  firtex/index/BarrelsInfo.h \
  firtex/index/BarrelTermPositionIterator.h \
  firtex/index/BarrelTermPostingIterator.h \
  firtex/index/ByteSlice.h \
  firtex/index/ByteSliceInputStream.h \
  firtex/index/ByteSliceOutputStream.h \
  firtex/index/CommitCondition.h \
  firtex/index/CommitList.h \
  firtex/index/CommitScheduler.h \
  firtex/index/Committable.h \
  firtex/index/common/IndexKeyHasher.h \
  firtex/index/common/PostingTraits.h \
  firtex/index/common/TypedIndexer.h \
  firtex/index/common/TypedInMemTermIterator.h \
  firtex/index/common/TypedInMemTermReader.h \
  firtex/index/common/TypedTermIterator.h \
  firtex/index/common/TypedTermReader.h \
  firtex/index/ComponentBuilder.h \
  firtex/index/ComponentCreatorFactory.h \
  firtex/index/compress/Coding.h \
  firtex/index/compress/OptPForDeltaCoding.h \
  firtex/index/compress/Pack.h \
  firtex/index/compress/S16Coding.h \
  firtex/index/compress/Unpack.h \
  firtex/index/ConcurrentMergeScheduler.h \
  firtex/index/datetime/DateTimeComponentCreator.h \
  firtex/index/datetime/DateTimeIndexer.h \
  firtex/index/datetime/DateTimeIndexMerger.h \
  firtex/index/datetime/DateTimeTermIterator.h \
  firtex/index/datetime/DateTimeTermReader.h \
  firtex/index/datetime/InMemDateTimeTermIterator.h \
  firtex/index/datetime/InMemDateTimeTermReader.h \
  firtex/index/DBTMergePolicy.h \
  firtex/index/DeletedDocumentFilter.h \
  firtex/index/DictLoader.h \
  firtex/index/DocIdRecycling.h \
  firtex/index/DocPostingDecoder.h \
  firtex/index/DocPostingMerger.h \
  firtex/index/DocPostingWriter.h \
  firtex/index/DocSkipListReader.h \
  firtex/index/DocSkipListWriter.h \
  firtex/index/DocSkipPoint.h \
  firtex/index/DocumentConsumer.h \
  firtex/index/FieldComponentCreator.h \
  firtex/index/FieldFilter.h \
  firtex/index/FieldIndexer.h \
  firtex/index/FieldMerger.h \
  firtex/index/FieldSelector.h \
  firtex/index/ForwardIndexCreator.h \
  firtex/index/ForwardIndexFactory.h \
  firtex/index/ForwardIndexIterator.h \
  firtex/index/ForwardIndexIteratorTraits.h \
  firtex/index/ForwardIndexMerger.h \
  firtex/index/forwardindex/PrimitiveTypeForwardIndexCreator.h \
  firtex/index/forwardindex/PrimitiveTypeForwardIndexIterator.h \
  firtex/index/forwardindex/PrimitiveTypeForwardIndexMerger.h \
  firtex/index/forwardindex/PrimitiveTypeForwardIndexReader.h \
  firtex/index/forwardindex/PrimitiveTypeForwardIndexReaderImpl.h \
  firtex/index/forwardindex/PrimitiveTypeForwardIndexReaderMMapImpl.h \
  firtex/index/forwardindex/PrimitiveTypeForwardIndexWriter.h \
  firtex/index/ForwardIndexReader.h \
  firtex/index/ForwardIndexWriter.h \
  firtex/index/IndexBarrelKeeper.h \
  firtex/index/IndexBarrelReader.h \
  firtex/index/IndexBarrelWriter.h \
  firtex/index/IndexCleanerFactory.h \
  firtex/index/IndexCleaner.h \
  firtex/index/Index.h \
  firtex/index/IndexMerger.h \
  firtex/index/IndexReader.h \
  firtex/index/IndexSchema.h \
  firtex/index/IndexWriter.h \
  firtex/index/IndexWriterNotification.h \
  firtex/index/InMemDocPostingDecoder.h \
  firtex/index/InMemIndexBarrelReader.h \
  firtex/index/InMemIndexMerger.h \
  firtex/index/InMemoryTermReader.h \
  firtex/index/InMemPosPostingDecoder.h \
  firtex/index/KeepByCommitIndexCleaner.h \
  firtex/index/keyword/InMemKeywordTermIterator.h \
  firtex/index/keyword/InMemKeywordTermReader.h \
  firtex/index/keyword/KeywordComponentCreator.h \
  firtex/index/keyword/KeywordIndexer.h \
  firtex/index/keyword/KeywordIndexMerger.h \
  firtex/index/keyword/KeywordTermIterator.h \
  firtex/index/keyword/KeywordTermReader.h \
  firtex/index/LengthNormEncoder.h \
  firtex/index/LengthNormIterator.h \
  firtex/index/LengthNormMerger.h \
  firtex/index/LengthNormReader.h \
  firtex/index/LengthNormWriter.h \
  firtex/index/Mergeable.h \
  firtex/index/MergeInfo.h \
  firtex/index/MergePolicyFactory.h \
  firtex/index/MergePolicy.h \
  firtex/index/MergeProposal.h \
  firtex/index/MergeScheduler.h \
  firtex/index/MultiFieldTermReader.h \
  firtex/index/MultiIndexBarrelReader.h \
  firtex/index/MultiIndex.h \
  firtex/index/MultiIndexReader.h \
  firtex/index/MultiPostingDecoder.h \
  firtex/index/MultiStoredFieldsReader.h \
  firtex/index/MultiTermIterator.h \
  firtex/index/MultiTermPostingIterator.h \
  firtex/index/MultiTermReader.h \
  firtex/index/NoMergePolicy.h \
  firtex/index/numeric/InMemSimpleNumericTermIterator.h \
  firtex/index/numeric/InMemSimpleNumericTermReader.h \
  firtex/index/numeric/NumericHasher.h \
  firtex/index/numeric/SimpleNumericComponentCreator.h \
  firtex/index/numeric/SimpleNumericIndexer.h \
  firtex/index/numeric/SimpleNumericIndexMerger.h \
  firtex/index/numeric/SimpleNumericTermIterator.h \
  firtex/index/numeric/SimpleNumericTermReader.h \
  firtex/index/OptimizeMergePolicy.h \
  firtex/index/OptPFDPostingCoding.h \
  firtex/index/PosPostingDecoder.h \
  firtex/index/PosPostingMerger.h \
  firtex/index/PosPostingWriter.h \
  firtex/index/PosSkipListReader.h \
  firtex/index/PosSkipListWriter.h \
  firtex/index/PostingCodingFactory.h \
  firtex/index/PostingCoding.h \
  firtex/index/PostingDecoder.h \
  firtex/index/PostingMerger.h \
  firtex/index/PostingPool.h \
  firtex/index/PostingWriter.h \
  firtex/index/PrimaryKeyIndex.h \
  firtex/index/primarykey/PrimaryKeyCreator.h \
  firtex/index/primarykey/PrimaryKeyIndexer.h \
  firtex/index/primarykey/PrimaryKeyMerger.h \
  firtex/index/primarykey/PrimaryKeyPostingDecoder.h \
  firtex/index/primarykey/PrimaryKeyPostingIterator.h \
  firtex/index/primarykey/PrimaryKeyTermIterator.h \
  firtex/index/primarykey/PrimaryKeyTermReader.h \
  firtex/index/ResultDoc.h \
  firtex/index/SequenceMergeScheduler.h \
  firtex/index/SingleIndexBarrelReader.h \
  firtex/index/StoredFieldsMerger.h \
  firtex/index/StoredFieldsReader.h \
  firtex/index/StoredFieldsReaderImpl.h \
  firtex/index/StoredFieldsWriter.h \
  firtex/index/SyncCommitScheduler.h \
  firtex/index/Term.h \
  firtex/index/TermInfo.h \
  firtex/index/TermIterator.h \
  firtex/index/TermMeta.h \
  firtex/index/TermPostingIterator.h \
  firtex/index/TermReader.h \
  firtex/index/text/InMemTextTermIterator.h \
  firtex/index/text/InMemTextTermReader.h \
  firtex/index/text/TextComponentCreator.h \
  firtex/index/text/TextIndexer.h \
  firtex/index/text/TextIndexMerger.h \
  firtex/index/text/TextTermIterator.h \
  firtex/index/text/TextTermReader.h \
  firtex/index/TypedDict.h \
  firtex/index/TypedDictWriter.h \
  firtex/index/TypedDocPostingWriter.h \
  firtex/index/TypedForwardIndexIterator.h \
  firtex/index/TypedPosPostingWriter.h \
  firtex/index/TypedSkipListReader.h \
  firtex/index/TypedSkipListWriter.h \
  firtex/index/TypedTerm.h \
  firtex/queryparser/DefaultExprEvaluatorBuilder.h \
  firtex/queryparser/DefaultQueryBuilder.h \
  firtex/queryparser/ExprEvaluatorBuilder.h \
  firtex/queryparser/ExprLexer.h \
  firtex/queryparser/ExprNode.h \
  firtex/queryparser/ExprOptimizer.h \
  firtex/queryparser/ExprParser.h \
  firtex/queryparser/FlexLexer.h \
  firtex/queryparser/QueryBuilder.h \
  firtex/queryparser/QueryExpr.h \
  firtex/queryparser/QueryExprLexer.h \
  firtex/queryparser/QueryExprParser.h \
  firtex/queryparser/QueryParser.h \
  firtex/search/AndQueryExecutor.h \
  firtex/search/AnyQueryExecutor.h \
  firtex/search/AnyQuery.h \
  firtex/search/ArgListExprEvaluator.h \
  firtex/search/AttrExprEvaluator.h \
  firtex/search/BinaryExprEvaluator.h \
  firtex/search/BM25Scorer.h \
  firtex/search/BooleanQueryExecutorBuilder.h \
  firtex/search/BooleanQuery.h \
  firtex/search/Clause.h \
  firtex/search/ConstExprEvaluator.h \
  firtex/search/DefaultSimilarity.h \
  firtex/search/DistExprEvaluator.h \
  firtex/search/DocScoreFeature.h \
  firtex/search/DocSelectClause.h \
  firtex/search/ExprEvaluator.h \
  firtex/search/FeatureProvider.h \
  firtex/search/FieldSelectClause.h \
  firtex/search/FilterClause.h \
  firtex/search/Filter.h \
  firtex/search/HitCollector.h \
  firtex/search/HitQueue.h \
  firtex/search/IndexFeature.h \
  firtex/search/IndexSearcher.h \
  firtex/search/InExprEvaluator.h \
  firtex/search/MatchComparator.h \
  firtex/search/MatchedDoc.h \
  firtex/search/MatchedDocSet.h \
  firtex/search/OrQueryExecutor.h \
  firtex/search/ParameterClause.h \
  firtex/search/PhraseQueryExecutor.h \
  firtex/search/PhraseQuery.h \
  firtex/search/QueryClause.h \
  firtex/search/QueryExecutor.h \
  firtex/search/QueryFeature.h \
  firtex/search/Query.h \
  firtex/search/QueryHits.h \
  firtex/search/QueryResult.h \
  firtex/search/QueryTracerAppender.h \
  firtex/search/QueryTracer.h \
  firtex/search/RangeQuery.h \
  firtex/search/ReqOptQueryExecutor.h \
  firtex/search/ReqProhQueryExecutor.h \
  firtex/search/ResultCollector.h \
  firtex/search/ResultCollectorImpl.h \
  firtex/search/ResultFormatter.h \
  firtex/search/ResultParser.h \
  firtex/search/ScoredDoc.h \
  firtex/search/Scorer.h \
  firtex/search/ScorerProfileFactory.h \
  firtex/search/ScorerProfile.h \
  firtex/search/Similarity.h \
  firtex/search/SimpleHitCollector.h \
  firtex/search/SortClause.h \
  firtex/search/SortedHitCollector.h \
  firtex/search/Sorter.h \
  firtex/search/Statement.h \
  firtex/search/TermQueryExecutor.h \
  firtex/search/TermQueryFeature.h \
  firtex/search/TermQuery.h \
  firtex/search/TermScoreFeature.h \
  firtex/search/TernaryExprEvaluator.h \
  firtex/search/UnaryExprEvaluator.h \
  firtex/search/XMLResultFormatter.h \
  firtex/search/XMLResultParser.h \
  firtex/store/BlockFileInputStream.h \
  firtex/store/BlockFileOutputStream.h \
  firtex/store/BlockFileSystem.h \
  firtex/store/FileSystemFactory.h \
  firtex/store/FileSystem.h \
  firtex/store/InputStream.h \
  firtex/store/InputStreamPool.h \
  firtex/store/LocalFileOutputStream.h \
  firtex/store/MMapFileInputStream.h \
  firtex/store/MMapFileSystem.h \
  firtex/store/OutputStream.h \
  firtex/thread/Condition.h \
  firtex/thread/Event.h \
  firtex/thread/Event_POSIX.h \
  firtex/thread/Event_WIN32.h \
  firtex/thread/FastMutex.h \
  firtex/thread/FastMutex_POSIX.h \
  firtex/thread/HPSMR.h \
  firtex/thread/Mutex.h \
  firtex/thread/Mutex_POSIX.h \
  firtex/thread/Mutex_WIN32.h \
  firtex/thread/Runnable.h \
  firtex/thread/RWLock.h \
  firtex/thread/RWLock_POSIX.h \
  firtex/thread/RWLock_WIN32.h \
  firtex/thread/ScopedLock.h \
  firtex/thread/ScopedUnlock.h \
  firtex/thread/StoppableObject.h \
  firtex/thread/SynchronizedObject.h \
  firtex/thread/Thread.h \
  firtex/thread/ThreadLocal.h \
  firtex/thread/ThreadPool.h \
  firtex/thread/Thread_POSIX.h \
  firtex/thread/Thread_WIN32.h \
  firtex/thread/TSS.h \
  firtex/thread/TSS_MACOS.h \
  firtex/thread/TSS_POSIX.h \
  firtex/thread/TSS_WIN32.h \
  firtex/utility/AutoPtr.h \
  firtex/utility/BinaryFile.h \
  firtex/utility/BinaryFile_POSIX.h \
  firtex/utility/BinaryFile_WIN32.h \
  firtex/utility/BitVector.h \
  firtex/utility/BoundedChunkAllocator.h \
  firtex/utility/BoundedConcurrentHashMap.h \
  firtex/utility/BoundedConcurrentQueue.h \
  firtex/utility/Charset.h \
  firtex/utility/ConcurrentLinkedQueue.h \
  firtex/utility/ConcurrentList.h \
  firtex/utility/DateTime.h \
  firtex/utility/DirectoryIterator.h \
  firtex/utility/DirectoryIterator_POSIX.h \
  firtex/utility/DirectoryIterator_WIN32.h \
  firtex/utility/Environment.h \
  firtex/utility/Environment_LINUX.h \
  firtex/utility/Environment_WIN32.h \
  firtex/utility/Exception.h \
  firtex/utility/File.h \
  firtex/utility/File_LINUX.h \
  firtex/utility/File_WIN32.h \
  firtex/utility/HashComparator.h \
  firtex/utility/Hash.h \
  firtex/utility/HashMap.h \
  firtex/utility/IconvWrapper.h \
  firtex/utility/Iterator.h \
  firtex/utility/KeyValueParser.h \
  firtex/utility/LinkedHashMap.h \
  firtex/utility/LooseBoundedPool.h \
  firtex/utility/MiscUtil.h \
  firtex/utility/MMapFile.h \
  firtex/utility/MMapFile_POSIX.h \
  firtex/utility/MMapFile_WIN32.h \
  firtex/utility/NonCopyable.h \
  firtex/utility/NumberFormatter.h \
  firtex/utility/Number.h \
  firtex/utility/NumberParser.h \
  firtex/utility/Path.h \
  firtex/utility/Path_LINUX.h \
  firtex/utility/Path_WIN32.h \
  firtex/utility/Pool.h \
  firtex/utility/PriorityQueue.h \
  firtex/utility/Reader.h \
  firtex/utility/SimpleAllocator.h \
  firtex/utility/SimpleSegregatedAllocator.h \
  firtex/utility/Singleton.h \
  firtex/utility/SlicedVector.h \
  firtex/utility/SmallFloat.h \
  firtex/utility/String.h \
  firtex/utility/StringPool.h \
  firtex/utility/StringReader.h \
  firtex/utility/StringTokenizer.h \
  firtex/utility/StringUtils.h \
  firtex/utility/SynchronizedQueue.h \
  firtex/utility/SyncSegregatedAllocator.h \
  firtex/utility/SystemInitializer.h \
  firtex/utility/TextFile.h \
  firtex/utility/TimeProbe.h \
  firtex/utility/Timespan.h \
  firtex/utility/Timestamp.h \
  firtex/utility/TypedSimpleChunkedPool.h \
  firtex/utility/URLDecoder.h \
  firtex/utility/XMLDocumentWrapper.h \
  firtex/utility/ZIPFile.h \
  firtex/utility/ZLib.h
