# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs

EXTRA_DIST = \
	FirteX_8.0.vcproj\
	FirteX_8.0.sln\
	All-Inclusive_8.0.sln\
	FirteX_9.0.vcproj\
	FirteX_9.0.sln\
	All-Inclusive_9.0.sln\
	FirteX_10.0.vcxproj\
	FirteX_10.0.sln\
	All-Inclusive_10.0.sln\
	ReadMe.txt

