#find . -name "*.h" | sed -e 's/^\.\///' | sed -e 's/^.*$/  & \\/' | sort
#find . -name "*.*pp" | sed -e 's/^\.\///' | sed -e 's/^.*$/  & \\/' | sort
nobase_include_HEADERS = \
  firtex/extension/collection/CollectionConfigure.h \
  firtex/extension/collection/CollectionFactory.h \
  firtex/extension/collection/Collection.h \
  firtex/extension/collection/CollectionTemplate.h \
  firtex/extension/collection/ConsoleProgressObserver.h \
  firtex/extension/collection/DefaultFileFilter.h \
  firtex/extension/collection/DirCollection.h \
  firtex/extension/collection/DirectoryFileFetcher.h \
  firtex/extension/collection/FileFetcher.h \
  firtex/extension/collection/FileFilter.h \
  firtex/extension/collection/MonitorDirectoryFileFetcher.h \
  firtex/extension/collection/ProgressObserver.h \
  firtex/extension/collection/StandardCollection.h \
  firtex/extension/collection/TrecCollection.h \
  firtex/extension/com/Com.h \
  firtex/extension/com/ComPtr.h \
  firtex/extension/com/ComUtil.h \
  firtex/extension/com/DllServer.h \
  firtex/extension/com/Variant.h \
  firtex/extension/FirteX-Ext.h \
  firtex/extension/network/EchoService.h \
  firtex/extension/network/FunctionBinder.h \
  firtex/extension/network/HTTPTypes.h \
  firtex/extension/network/NetworkException.h \
  firtex/extension/plugin/AnalyzerPlugins.h \
  firtex/extension/plugin/ComDocument.h \
  firtex/extension/plugin/ComDocumentSchema.h \
  firtex/extension/plugin/ComDocumentSource.h \
  firtex/extension/plugin/ComDocumentTemplate.h \
  firtex/extension/plugin/ComFieldTag.h \
  firtex/extension/plugin/ComObject.h \
  firtex/extension/plugin/ComRawDocument.h \
  firtex/extension/plugin/ComTokenSource.h \
  firtex/extension/plugin/ComTokenView.h \
  firtex/extension/plugin/DocumentProcessorPlugin.h \
  firtex/extension/plugin/DocumentProcessorPlugins.h \
  firtex/extension/plugin/FirteXCOM.h \
  firtex/extension/plugin/PluginFactory.h \
  firtex/extension/plugin/Plugin.h \
  firtex/extension/plugin/Plugins.h \
  firtex/extension/plugin/SharedLibrary.h \
  firtex/extension/plugin/SharedLibrary_POSIX.h \
  firtex/extension/plugin/SharedLibrary_WIN32.h \
  firtex/extension/processor/DocumentProcessorFactory.h \
  firtex/extension/processor/DocumentProcessor.h \
  firtex/extension/processor/DocumentReader.h \
  firtex/extension/processor/DocumentSource.h \
  firtex/extension/processor/DocumentTemplate.h \
  firtex/extension/processor/GZipDocumentReader.h \
  firtex/extension/processor/HTMLDocumentProcessor.h \
  firtex/extension/processor/HTMLParser.h \
  firtex/extension/processor/MultiTypeDocumentProcessor.h \
  firtex/extension/processor/PlainDocumentProcessor.h \
  firtex/extension/processor/PlainDocumentReader.h \
  firtex/extension/processor/RawDocument.h \
  firtex/extension/processor/StandardDocumentProcessor.h \
  firtex/extension/processor/TrecDocumentProcessor.h \
  firtex/extension/util/Application.h \
  firtex/extension/util/AppRunner.h \
  firtex/extension/util/HelpDisplayAppRunner.h \
  firtex/extension/util/LibraryException.h \
  firtex/extension/util/OptionCallback.h \
  firtex/extension/util/OptionException.h \
  firtex/extension/util/Option.h \
  firtex/extension/util/OptionParser.h \
  firtex/extension/util/SharedOptionCallback.h \
  firtex/FirteX-Ext.h 